# rust-kvm

./: .gitignore  Cargo.toml  ROADMAP.md
cli/: package.json  pnpm-lock.yaml  tsconfig.json
cli/src/: app.tsx  main.tsx
cli/src/components/: welcome-screen.tsx
cli/src/lib/: discovery.ts  identity.ts  network.ts
crates/kvm-app/: Cargo.toml
crates/kvm-app/src/: main.rs
crates/kvm-identity/: Cargo.toml
crates/kvm-identity/src/: lib.rs  words.rs
