[workspace]
resolver = "2"
members = ["crates/kvm-identity", "crates/kvm-app"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
if-addrs = "0.13"
